--- a/templates/persona.html
+++ b/templates/persona.html
@@ -1,8 +1,8 @@
 
-
-<form action="{% url "cretae_persona" %}" method="post">
+<h2>App persona</h2>
+<form action="{% url "create_persona" %}" method="post">
     {% csrf_token %}
     {{ form.label_tag }}
     {{ form.as_div }}
-
+    <button type="submit">Guardar</button>
 </form>
